# detect-word

./: .gitignore  CMakeLists.txt  Makefile  detect-word.cpp  test.opus
src/: common-whisper.cpp  ffmpeg-transcode.cpp
